# orange3-chem

./: .gitignore  MANIFEST.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: run-tests.yml
orangecontrib/chem/: molecule_embedder.py  molecule_embedder_local.py
orangecontrib/chem/widgets/: _fingerprints.py  _moleculefilter.py  common.py  owmcs.py  owmoleculeembedding.py  owmoleculefilter.py  owmoleculefingerprints.py  owmoleculeviewer.py
orangecontrib/chem/widgets/tests/: __init__.py  test_owmcs.py  test_owmoleculefilter.py  test_owmoleculefingerprints.py  test_owmoleculeviewer.py
orangecontrib/chem/widgets/utils/: itemmodels.py
