[metadata]
name             = Orange3-Chemoinformatics
version          = 0.1.0
author           = Bioinformatics Laboratory, FRI UL
author_email     = contact@orange.biolab.si

project_url      = http://orange.biolab.si/download
description      = Orange3 add-on for Chemoinformatics
long_description = file: about.md
long_description_content_type = text/markdown
license          = GPL3+
keywords =
    orange3 add-on
    orange3-chem

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
include_package_data = True
packages = find:
namespace_packages = orangecontrib
install_requires =
    numpy>=1.10.0
    Orange3>=3.21.0
    rdkit-pypi
    orange3-imageanalytics>=0.7.0

[options.package_data]
* = *.svg, *.tflite

[options.entry_points]
orange3.addon =
    Orange3-Chemoinformatics = orangecontrib.chem
orange.widgets =
    Chemoinformatics = orangecontrib.chem.widgets
orange.canvas.help =
    html-index = orangecontrib.chem.widgets:WIDGET_HELP_PATH


[coverage:run]
source =
    orangecontrib.chem

omit =
    */tests/*.py

[coverage:report]
exclude_lines =
    noqa
    pragma: no coverage
    raise NotImplementedError
    if __name__ == .__main__.:
    if typing.TYPE_CHECKING:
    if TYPE_CHECKING:
